[tool.poetry]
name = "hackman"
version = "0.1.0"
description = ""
authors = ["adisbladis <adisbladis@gmail.com>"]
license = "GPL-2.0-only"
packages = [
    { include = "dsl_lights" },
    { include = "dsl_log" },
    { include = "dsl_occupied" },

    { include = "hackman" },
    { include = "hackman_door" },
    { include = "hackman_notifier" },
    { include = "hackman_payments" },
    { include = "hackman_rfid" },
]

[tool.poetry.scripts]
dsl-lights = 'dsl_lights:main'
dsl-log = 'dsl_log:main'
dsl-occupied = 'dsl_occupied:main'

hackman = 'hackman.cmd:hackman'
hackman-manage = 'hackman.manage:main'

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
Jinja2 = "^3.1.2"
gunicorn = "^20.1.0"
django-redis = "^5.2.0"
IPy = "^1.01"
django-cors-headers = "^3.13.0"
django-oauth-toolkit = "^2.2.0"
gevent = "^22.10.1"
pyserial = "^3.5"
mote = "^0.0.4"
psycopg2 = "^2.9.5"
setuptools = "^65.5.0"
rpi-gpio = "^0.7.1"
django = "^4.1.2"
ipy = "^1.1"
jinja2 = "^3.1.2"
cryptography = "3.4.8"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
coverage = "^6.5.0"
django-stubs = "^1.12.0"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
types-redis = "^4.3.21.3"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
